tests/baselines/reference/optionalSetterParam.errors.txt
==== tests/cases/compiler/optionalSetterParam.ts (1 errors) ====
    class foo {
    
        public set bar(param?:any) { }
                       ~~~~~~~~~~
!!! error TS1051: 'set' accessor parameter cannot be optional.
    }
    